[package]
name = "vmware-svga-vulkan-impl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

# Unwind puts qemu in weird state, locking up mouse with gdb
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
bytemuck = { version = "1.13.1", features = ["extern_crate_std", "derive"] }
crossbeam = "0.8.2"
log = { version = "0.4.20", features = ["std"] }
parking_lot = "0.12.1"
pollster = "0.3.0"
pretty_env_logger = "0.5.0"
wgpu = "0.17.0"
wide = "0.7.11"

[build-dependencies]
cbindgen = "0.24.5"

[dev-dependencies]
bindgen = "0.66.1"
